fix mailbox not showing on a very long title trivia

--- a/src/pages/TriviaDetails/TriviaDetails.module.css
+++ b/src/pages/TriviaDetails/TriviaDetails.module.css
@@ -246,7 +246,7 @@ button, input[type="checkbox"] {
   /* transform: translateX(-150px); */
   margin-left: auto;
   margin-right: auto;
-  bottom: 7%;
+  bottom: 50px;
   right: 37%; 
   z-index: 1;
 }
